error de cuadrillaform

--- a/proyectos/templates/panel.html
+++ b/proyectos/templates/panel.html
@@ -31,6 +31,11 @@
            class="btn btn-sm btn-outline-primary mt-2">
             Asignar / Editar Cuadrillas
         </a>
+
+        <a href="{% url 'personal:crear_cuadrilla' %}" class="btn btn-outline-primary">
+    + Crear Cuadrilla
+</a>
+
     </div>
 </div>
 {% endfor %}
