--- a/personal/templates/cuadrilla_form.html
+++ b/personal/templates/cuadrilla_form.html
@@ -47,7 +47,7 @@
                 </td>
                 <td>{{ t.username }}</td>
                 <td>
-                    <select name="roles">
+                    <select name="roles_{{ t.id }}">
                         <option value="">-- Rol --</option>
                         {% for r in roles %}
                         <option value="{{ r.id }}">{{ r.nombre }}</option>
