--- a/personal/templates/detalle_cuadrilla.html
+++ b/personal/templates/detalle_cuadrilla.html
@@ -128,4 +128,6 @@
 
 <a href="{% url 'proyectos:panel' %}" class="btn btn-secondary mt-3">Volver al Panel</a>
 
+<a href="{% url 'personal:editar_cuadrilla' cuadrilla.id %}" class="btn btn-primary mt-3 ms-2">Editar cuadrilla</a>
+
 {% endblock %}
