error corregido personal muestra estado

--- a/personal/templates/editar_estado_trabajador.html
+++ b/personal/templates/editar_estado_trabajador.html
@@ -35,4 +35,5 @@
     <button class="btn btn-primary">Guardar cambios</button>
 </form>
 
+<a href="{% url 'proyectos:panel' %}" class="btn btn-secondary mt-3">Volver al Panel</a>
 {% endblock %}
