crear cuadrilla con filtro personal

--- a/personal/templates/cuadrilla_editar.html
+++ b/personal/templates/cuadrilla_editar.html
@@ -18,7 +18,9 @@
             {% for t in trabajadores %}
                 {% if t.user %}
                     <option value="{{ t.user.id }}"
-                        {% if cuadrilla.lider and t.user.id == cuadrilla.lider.id %}selected{% endif %}>
+                        {% if cuadrilla.lider and t.user.id == cuadrilla.lider.id %}
+                            selected
+                        {% endif %}>
                         {{ t.nombre }} {{ t.apellido }}
                     </option>
                 {% endif %}
@@ -32,7 +34,9 @@
             <option value="">-- Ninguno --</option>
             {% for p in proyectos %}
                 <option value="{{ p.id }}"
-                    {% if cuadrilla.proyecto and p.id == cuadrilla.proyecto.id %}selected{% endif %}>
+                        {% if cuadrilla.proyecto and p.id == cuadrilla.proyecto.id %}
+                            selected
+                        {% endif %}>
                     {{ p.nombre }}
                 </option>
             {% endfor %}
@@ -40,7 +44,6 @@
     </div>
 
     <h4>Trabajadores y Roles asignados</h4>
-    <p>Selecciona los trabajadores y define sus roles.</p>
 
     <table class="table table-bordered">
         <thead>
@@ -51,42 +54,43 @@
                 <th>Nuevo Rol</th>
             </tr>
         </thead>
+
         <tbody>
+            {% for t in trabajadores %}
+                <tr>
+                    <td>
+                        <input class="trabajador-checkbox"
+                               type="checkbox"
+                               name="trabajadores"
+                               value="{{ t.id }}"
+                               {% if t.asignacion %}checked{% endif %}>
+                    </td>
 
-        {% for t in trabajadores %}
-            <tr>
-                <td>
-                    <input class="trabajador-checkbox"
-                           type="checkbox"
-                           name="trabajadores"
-                           value="{{ t.id }}"
-                           {% if t.asignacion %}checked{% endif %}>
-                </td>
+                    <td>{{ t.nombre }} {{ t.apellido }} ({{ t.rut }})</td>
 
-                <td>{{ t.nombre }} {{ t.apellido }} ({{ t.rut }})</td>
+                    <td>
+                        {% if t.asignacion and t.asignacion.rol %}
+                            {{ t.asignacion.rol.nombre }}
+                        {% else %}
+                            Sin rol
+                        {% endif %}
+                    </td>
 
-                <td>
-                    {% if t.asignacion and t.asignacion.rol %}
-                        {{ t.asignacion.rol.nombre }}
-                    {% else %}
-                        Sin rol
-                    {% endif %}
-                </td>
-
-                <td>
-                    <select name="roles_{{ t.id }}">
-                        <option value="">-- Rol --</option>
-                        {% for r in roles %}
-                            <option value="{{ r.id }}"
-                                    {% if t.asignacion and t.asignacion.rol and r.id == t.asignacion.rol.id %}selected{% endif %}>
-                                {{ r.nombre }}
-                            </option>
-                        {% endfor %}
-                    </select>
-                </td>
-            </tr>
-        {% endfor %}
-
+                    <td>
+                        <select name="roles_{{ t.id }}">
+                            <option value="">-- Rol --</option>
+                            {% for r in roles %}
+                                <option value="{{ r.id }}"
+                                    {% if t.asignacion and t.asignacion.rol and r.id == t.asignacion.rol.id %}
+                                        selected
+                                    {% endif %}>
+                                    {{ r.nombre }}
+                                </option>
+                            {% endfor %}
+                        </select>
+                    </td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
 
